# mechalicious

./: Cargo.toml  DESIGN.md
mechalicious-client/: Cargo.toml
mechalicious-client/data/: cursor.v2d  mechalicious.v2d
mechalicious-client/src/: main.rs  model_registry.rs
mechalicious-core/: Cargo.toml
mechalicious-core/src/: components.rs  lib.rs  pid.rs  systems.rs
mechalicious-server/: Cargo.toml
