[package]
name = "mechalicious-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ftvf = "0.6.0"
log = "0.4.20"
mechalicious-core = {path = "../mechalicious-core"}
psilo-ecs = {git="https://github.com/SolraBizna/psilo-ecs", rev="d3c95429240184755684116ca6bfe1af6970d50d"}
sdl2 = { version="0.35.2", features = ["bundled"] }
vectoracious = {git="https://github.com/SolraBizna/vectoracious", rev="fe94ef0"}
