[package]
name = "mechalicious-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcow = "1.1.0"
nalgebra = "0.32.3"
psilo-ecs = {git="http://github.com/SolraBizna/psilo-ecs", rev="d3c95429240184755684116ca6bfe1af6970d50d"}
